10.2HD/k8s/file-helper-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file-helper-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: file-helper-frontend
                port:
                  number: 80
          - path: /api/users
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /api/users/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /api/pdf
            pathType: ImplementationSpecific
            backend:
              service:
                name: pdf-service
                port:
                  number: 80
          - path: /api/pdf/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: pdf-service
                port:
                  number: 80
